<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Questions"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="10dp"
    >
    <TextView
        android:id="@+id/question_text"
        android:fontFamily="@font/harryfont"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_your_question"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="30sp"
        android:textColor="@color/black">
    </TextView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        >
        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:minHeight="50dp"
            android:progress="0"
            android:max="5"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            >
        </ProgressBar>
        <TextView
            android:id="@+id/progress_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1/5"
            android:fontFamily="@font/harryfont"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:padding="10dp"/>

    </LinearLayout>
    <TextView
        android:id="@+id/opt1"
        android:fontFamily="@font/harryfont"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/option_1"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="25sp"
        android:background="@drawable/question_option"
        android:layout_marginTop="15dp"
        android:padding="10dp">
    </TextView>
    <TextView
        android:id="@+id/opt2"
        android:fontFamily="@font/harryfont"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/option_2"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="25sp"
        android:background="@drawable/question_option"
        android:layout_marginTop="15dp"
        android:textColor="@color/black"
        android:padding="10dp">
    </TextView>
    <TextView
        android:id="@+id/opt3"
        android:fontFamily="@font/harryfont"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/option_3"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="25sp"
        android:background="@drawable/question_option"
        android:layout_marginTop="15dp"
        android:textColor="@color/black"
        android:padding="10dp">
    </TextView>
    <TextView
        android:id="@+id/opt4"
        android:fontFamily="@font/harryfont"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/option_4"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="25sp"
        android:background="@drawable/question_option"
        android:layout_marginTop="15dp"
        android:textColor="@color/black"
        android:padding="10dp">
    </TextView>
   <Button
       android:id="@+id/Submit"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:text="@string/submit"
       android:textSize="25sp"
       android:gravity="center"
       android:fontFamily="@font/harryfont"
       android:backgroundTint="#D1462F"
       android:layout_marginTop="10dp">
   </Button>
</LinearLayout>