<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@drawable/harrypotter_home"
    android:padding="10dp"

    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/quiz_app"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="35sp"
        android:textColor="@color/black"
        android:layout_marginBottom="10dp"
        >
    </TextView>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="#D9AE61"
        app:cardCornerRadius="5dp"
        app:cardElevation="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/welcome"
                android:gravity="center"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/black">
            </TextView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/please_enter_your_name"
                android:gravity="center"
                android:textSize="15sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_marginTop="10dp">
            </TextView>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_marginTop="10dp">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_your_name"
                    android:textColorHint="@color/black">

                </androidx.appcompat.widget.AppCompatEditText>

            </com.google.android.material.textfield.TextInputLayout>
            <Button
                android:id="@+id/btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lets_play"
                android:backgroundTint="@color/black"
                android:layout_marginTop="5dp"
                >
            </Button>

        </LinearLayout>


    </androidx.cardview.widget.CardView>
</androidx.appcompat.widget.LinearLayoutCompat>