<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Result"
    android:orientation="horizontal"
    android:gravity="center"
    android:background="@drawable/harrypotter_home"
    android:padding="10dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="5dp"
        app:cardElevation="10dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="10dp">
            <TextView
                android:id="@+id/congrats"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/congratulations"
                android:gravity="center"
                android:textSize="25sp"
                android:textStyle="bold"
                android:textColor="@color/black">

            </TextView>
            <TextView
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content"
                android:text="@string/your_score_is"
                android:gravity="center"
                android:textSize="20sp">
            </TextView>
            <TextView
                android:id="@+id/final_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_4_5"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:textSize="25sp"
                android:textStyle="bold"
                android:textColor="@color/black">
            </TextView>
            <Button
                android:id="@+id/finish"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="FINISH"
                android:textStyle="bold"
                android:textSize="25sp"
                android:layout_marginTop="10dp"
                ></Button>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>